--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h3> <span> qualification : </span>BSc (Hons) Computing </span>  </h3>
         <h3> <span> post : </span> Full Stack Developer </h3>
         <h3> <span> language : </span> Nepali, English, hindi </h3>
-        <a href="#"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
+        <a href="https://drive.google.com/file/d/191FoWZn4YzRO_OjRCWKgEALEXFs4oajL/view"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
     <div class="counter">        
