--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@
     </div>
 
     <div class="box">
-        <a  target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.sewakoyatra&fbclid=IwAR0ILcAhDzMy8B4cDKR_t8oGx6Xs38c3ta0TFRu6QiUneD3J4tIK6xG9SHY"><img src="https://play-lh.googleusercontent.com/hWSGDBom1_7eTVYZBngHKdKGzvbo3bJt3EvYeft5bNNx52ov-IYNIaT-wqz__igbB9OE=w2560-h1440-rw" style="object-fit: cover;" alt=""></a>
+        <a  target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.smarthealthnepal.customer"><img src="https://play-lh.googleusercontent.com/hWSGDBom1_7eTVYZBngHKdKGzvbo3bJt3EvYeft5bNNx52ov-IYNIaT-wqz__igbB9OE=w2560-h1440-rw" style="object-fit: cover;" alt=""></a>
     </div>
     
     <div class="box">
-        <a  target="_blank" rel="noopener noreferrer" href="https://play-lh.googleusercontent.com/d3ScCjwxDni0SehKFtL1yS4_IsufacPUMHFeVxhzIOCMgg-nF8FFbKvTMlH5FE24_0s=w2560-h1440-rw"><img src="https://play-lh.googleusercontent.com/d3ScCjwxDni0SehKFtL1yS4_IsufacPUMHFeVxhzIOCMgg-nF8FFbKvTMlH5FE24_0s=w2560-h1440-rw" style="object-fit: cover;" alt=""></a>
+        <a  target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.odacova.avorestro"><img src="https://play-lh.googleusercontent.com/d3ScCjwxDni0SehKFtL1yS4_IsufacPUMHFeVxhzIOCMgg-nF8FFbKvTMlH5FE24_0s=w2560-h1440-rw" style="object-fit: cover;" alt=""></a>
     </div>
     
     <div class="box">
